# v1

./: .gitignore  Cargo.toml  ERROR_GENERATOR_SUMMARY.md  GEN_ERRORS_INDEX.md  GEN_ERRORS_QUICK_START.md  MIGRATION_GUIDE.md  UNIFIED_ERROR_SYSTEM.md  errors_master.yaml  progress_status.md  test.cnf  test_string_ops.cnf
.github/workflows/: ci.yml
crates/centra-nf-cli/: Cargo.toml
crates/centra-nf-cli/src/: main.rs
crates/centra-nf-cli/tests/: cli_integration.rs  integration_test.rs
crates/centra-nf-lsp/: Cargo.toml
crates/centra-nf-lsp/src/: diagnostics.rs  handler.rs  jsonrpc.rs  lib.rs  main.rs  publisher.rs  server.rs
crates/centra-nf-lsp/tests/: integration_tests.rs
crates/cnf-compiler/: Cargo.toml
crates/cnf-compiler/src/: ast.rs  ir.rs  lexer.rs  lib.rs  parser.rs
crates/cnf-compiler/tests/: integration.rs
crates/cnf-runtime/: Cargo.toml
crates/cnf-runtime/src/: dag.rs  lib.rs  runtime.rs  scheduler.rs
crates/cnf-runtime/tests/: execution_tests.rs
crates/cnf-security/: Cargo.toml
crates/cnf-security/src/: lib.rs
crates/cnf-storage/: Cargo.toml
crates/cnf-storage/src/: checkpoint.rs  lib.rs  storage.rs  wal.rs
crates/cobol-protocol-v153/: Cargo.toml
crates/cobol-protocol-v153/src/: lib.rs
docs/: error-codes.md  lsp-features.md  lsp-setup.md  specification.md  vscode-setup.md
examples/: advanced_ops.cnf  control_flow.cnf  full_pipeline.cnf  io_demo.cnf  simple.cnf
tools/: .gitignore  Cargo.toml  README.md
tools/src/: doc_gen.rs  gen_errors.rs  test_engine.rs
tools/tests/ui/fail/: l1001.cnf  l1002.cnf  l1003.cnf  l1004.cnf  l1005.cnf  l1006.cnf  l1007.cnf  l1008.cnf  l1009.cnf  l1010.cnf  l1011.cnf  l1012.cnf  l1013.cnf  l1014.cnf  l1015.cnf  l1016.cnf  l1017.cnf  l1018.cnf  l1019.cnf  l1020.cnf  l1021.cnf  l1022.cnf  l1023.cnf  l1024.cnf  l1025.cnf  l1026.cnf  l1027.cnf  l1028.cnf  l1029.cnf  l1030.cnf  l1031.cnf  l1032.cnf  l1033.cnf  l1034.cnf  l1035.cnf  l1036.cnf  l1037.cnf  l1038.cnf  l1039.cnf  l1040.cnf  (+60 more)
