[workspace]
members = [
    "crates/cnf-compiler",
    "crates/cnf-runtime",
    "crates/cnf-security",
    "crates/cobol-protocol-v153",
    "crates/centra-nf-cli",
    "crates/centra-nf-lsp",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["CENTRA-NF Dev Team"]
license = "Proprietary"
