[workspace]
members = [
    "crates/cnf-compiler",
    "crates/cnf-runtime",
    "crates/cnf-security",
    "crates/cnf-storage",
    "crates/cobol-protocol-v153",
    "crates/cnf-stdlib",
    "crates/centra-nf-cli",
    "crates/centra-nf-lsp",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["CENTRA-NF Dev Team"]
license = "Proprietary"
