[package]
name = "centra-nf-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cnf-compiler = { path = "../cnf-compiler" }
cnf-runtime = { path = "../cnf-runtime" }
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
tempfile = "3"

[[bin]]
name = "centra-nf"
path = "src/main.rs"
