[package]
name = "centra-nf-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cnf-compiler = { path = "../cnf-compiler" }
cnf-runtime = { path = "../cnf-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lsp-types = "0.95"

[[bin]]
name = "centra-nf-lsp"
path = "src/main.rs"

[dev-dependencies]
