[package]
name = "cnf-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cnf-security = { path = "../cnf-security" }
cnf-compiler = { path = "../cnf-compiler" }
cobol-protocol-v153 = { path = "../cobol-protocol-v153" }
serde_json = "1"

[dev-dependencies]
criterion = "0.5"
cnf-compiler = { path = "../cnf-compiler" }

[[bench]]
name = "runtime_bench"
harness = false
