[package]
name = "cnf-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crc32fast = "1.4"
cnf-security = { path = "../cnf-security" }

[dev-dependencies]
tempfile = "3.5"
